<resources>
    <string name="app_name">pelem</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_genre">Genre</string>
    <string name="text_overview">Overview</string>
    <string name="text_popularity">Popularity</string>
    <string name="text_release_date">Release Date</string>
    <string name="text_rating">Rating</string>
    <string name="text_status">Status</string>
    <string name="text_companies">Companies</string>
</resources>